@@ -2,14 +2,19 @@
 <html lang="en-us">
 
 <head>
+    <!-- Got rid of extraneous "/" in <meta> tag -->
     <meta charset="UTF-8">
+    <!-- Changed Title of Page to be more descriptive -->
     <title>Horiseon Social Solution Services, Inc</title>
+    <!-- Moved this <link> below <title> -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
+    <!-- Changed div.header to header.header -->
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- Changed div to nav -->
         <nav>
             <ul>
                 <li>
@@ -24,23 +29,38 @@
             </ul>
         </nav>
     </header>
+    <!-- Changed div.hero to figure.hero -->
     <figure class="hero"></figure>
+    <!-- Changed div.content to main.content -->
     <main class="content">
+        <!-- -Added #search-engine-optimization to fix above anchor tag
+             -Got rid of .search-engine-optimization - extraneous
+             -Changed div#search-engine-optimization to section#search-engine-optimization-->
         <section id="search-engine-optimization">
+            <!-- -Added alt="Search Engine Optimization Idea Book"
+                 -Added title="Search Enging Optimization Idea Book"-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search Engine Optimization Idea Book" title="Search Enging Optimization Idea Book" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
+        <!-- -Got rid of .online-reputation-management - extraneous
+             -Changed div#online-reputation-management to section#online-reputation-management-->
         <section id="online-reputation-management">
+            <!-- -Added alt="Online Reputation Management Tools" 
+                - Added title="Online Reputation Management Tools"-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Online Reputation Management Tools" title="Online Reputation Management Tools" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+        <!-- -Got rid of .social-media-marketing - extraneous
+            - Changed div#social-media-marketing to section#social-media-marketing -->
         <section id="social-media-marketing">
+            <!-- -Added alt="Social Media Idea Roundtable
+                - Added title="Social Media Idea Roundtable" -->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Social Media Idea Roundtable" title="Social Media Idea Roundtable" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -48,30 +68,42 @@
             </p>
         </section>
     </main>
+    <!-- -Changed div.benefits to aside.benefits -->
     <aside class="benefits">
+        <!-- -Changed div.benefit-lead to section.benefit-lead -->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
+            <!-- -Added alt="Lead Generation Icon"
+                -Added title="Lead Generation Icon" -->
             <img src="./assets/images/lead-generation.png" alt="Lead Generation Icon" title="Lead Generation Icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
+        <!-- -Changed div.benefit-brand to section.benefit-brand -->
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
+            <!-- -Added alt="Brand Awareness Icon"
+                -Added title="Brand Awareness Icon" -->
             <img src="./assets/images/brand-awareness.png" alt="Brand Awareness Icon" title="Brand Awareness Icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
+        <!-- Changed div.benefit-cost to section.benefit-cost -->
         <section class="benefit-cost">
             <h3>Cost Management</h3>
+            <!-- -Added alt="Cost Management Icon"
+                - Added title="Cost Management Icon"-->
             <img src="./assets/images/cost-management.png" alt="Cost Management Icon" title="Cost Management Icon" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
+    <!-- Changed div.footer to footer.footer -->
     <footer class="footer">
+        <!-- Replaced heart symbol- typed with "&hearts;"-->
         <h2>Made with &hearts; by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
